--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <div class="container">
             <nav>
                 <h1>foydali</h1> <h1>ok</h1>
+                <h2>yangilik</h2>
                 <ul>
                     <li><a href="#">bo'lim</a></li>
                     <li><a href="#">ma'lumot</a></li>
